apps/fast-platform/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast-platform
spec:
  ports:
    - {name: http, port: 80, targetPort: http}
